修改了Client的部分代码，使其可以被继承

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,4 +4,4 @@ add_executable(http_server http_server.cc)
 add_executable(hello_server hello_server.cc)
 add_executable(test test.cpp)
 add_executable(server server.cpp)
-add_executable(client client.cpp)
+add_executable(client http_client.cc)
